correcting image overflow take two

--- a/css/style.scss
+++ b/css/style.scss
@@ -52,7 +52,7 @@ body {
   background-color: $portfolio-blue;
   padding: 3em;
   margin-top: 2em;
-  height: auto;
+  overflow: auto;
 }
 
 #projects {
